# aymara-sdk

./: .gitignore  .python-version  DEMO.ipynb  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  sample_sdk.ipynb  sdk_demo.ipynb  setup.py  test_notebook.ipynb
.github/workflows/: aymara-tests.yml  ci-cd.yml  docs.yml  e2e_test.yml  integration-tests.yml  release.yml  test.yml
aymara_ai/: _internal_types.py  http_client.py  sdk.py  types.py
aymara_ai/api/: scores.py  tests.py
aymara_ai/core/: __init__.py  errors.py  score_runs.py  sdk.py  summaries.py  tests.py  upload_user_test.py  uploads.py
aymara_ai/examples/: demo_student.py
aymara_ai/examples/accuracy/: accuracy_notebook.ipynb
aymara_ai/examples/jailbreak/: jailbreak_notebook.ipynb
aymara_ai/examples/safety/: free_trial_notebook.ipynb  image_safety_notebook.ipynb  safety_notebook.ipynb  text-to-text_safety_notebook.ipynb
aymara_ai/utils/: constants.py  logger.py
aymara_sdk/: __init__.py  base.py  logger.py  sdk.py  types.py
aymara_sdk/core/: __init__.py  explanations.py  protocols.py  score_run.py  score_runs.py  sdk.py  summaries.py  tests.py
aymara_sdk/examples/: demo_student.py
aymara_sdk/examples/jailbreak/: jailbreak_notebook.ipynb
aymara_sdk/examples/safety/: free_trial_notebook.ipynb  jailbreak_notebook.ipynb  safety_example.py  safety_notebook.ipynb
aymara_sdk/scores_runs/: async_client.py  sync_client.py
aymara_sdk/tests/: async_client.py  sync_client.py
aymara_sdk/types/: __init__.py  types.py
aymara_sdk/utils/: constants.py  errors.py  logger.py
classes/: api.py  helper.py  scorer.py  student.py  test.py
docs/source/: conf.py  errors.rst  faq.md  index.md  index.rst  readme.rst  safety_notebook.ipynb  sdk_reference.rst
docs/source/_static/: custom.css
examples/: demo_async.py  demo_student.py  demo_sync.py  student.py
examples/jailbreak/: demo_sync.py  jailbreak_demo_sync.py
examples/safety/: demo_sync.py  safety_demo_async.py  safety_demo_sync.py  safety_notebook.ipynb
sdk/: __init__.py  _internal_types.py  errors.py  http_client.py  sdk.py  types.py
sdk/api/: scores.py  tests.py
tests/: conftest.py
tests/end_to_end/: test_jailbreak_e2e.py
tests/integration/: conftest.py  test_jailbreak_test_integration.py  test_safety_test_integration.py  test_score_runs_integration.py  test_sdk_integration.py  test_summaries_integration.py  test_tests_integration.py  test_uploads_integration.py
tests/unit/: test_api_scores.py  test_api_tests.py  test_explanations.py  test_logger.py  test_score_runs.py  test_sdk.py  test_summaries.py  test_tests.py
