
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aymara-ai"
version = "0.1.1"
description = "A Python SDK for using Ayamra to test your AI alignment."
authors = [
    {name = "Aymara AI", email = "contact@aymara.ai"},
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.23.0,<0.24.0",
    "multiprocess==0.70.16",
    "openai==1.40.1",
    "pandas==2.2.2",
    "pydantic==2.1.1",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "uuid_utils==0.9.0",
    "openapi-python-client==0.21.3"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "sphinx",
    "sphinx_rtd_theme",
    "myst-parser",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aymara_sdk*", "examples*"]
exclude = []


[tool.pytest.ini_options]
norecursedirs = ["aymara_sdk/*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
